# GP2

./: GP2-Lab1.docx  README.md
Debug/: Labs.ilk
Lab1/: CMakeLists.txt  Display.cpp  Display.h  Lab1.vcxproj  Lab1.vcxproj.filters  MainGame.cpp  MainGame.h  Mesh.cpp  Mesh.h  STB.c  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Transform.h
Lab1/Debug/: Lab1.exe.recipe  Labs.exe.recipe  Labs.ilk  vc142.idb  vc143.idb
Lab1/Debug/Lab1.tlog/: CL.read.1.tlog  CL.write.1.tlog  Lab1.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Lab1/Debug/Labs.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Labs.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Lab1/Resources/: funnyColourThing.vert  textureShader.frag  textureShader.vert
